code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Feb-2011 Christophe Demko
 # [#24562] com_menu not looking for component xml file (Mark Dexter, Selene Feigl, marius van rijnsoever)
 # [#24693] Articles Category Module Gropu by Author error (Mark Dexter)

04-Feb-2011 Jean-Marie Simonet
 #$ Deleting hard-coded colons
 # [#24710] Contact language is ignored in frontend. Thanks Christophe.
 # [#24735] Removes references to non-existing stylesheet. Thanks Rouven
 $# Normalizing some ini strings.

03-Feb-2011 Mark Dexter
 # [#24317] Module articles category - fatal error

03-Feb-2011 Jean-Marie Simonet
 #$ [#24724] Inconsistency in the Link Author article option. Thanks Bill.
 # [#24726] Link Author option lacks in Archived Articles menu item. Thanks Bill.
 $ Correcting some ini strings values
 #$ [#24732] Message label incorrect showed and inconsistency with colon after labels in Contact form. Thanks Bill.
 
02-Feb-2011 Mark Dexter
 # [#24702] *Don't show empty divs in mod_login
 # [#24704] *menu items metadata not implemented
 # [#24698] *Incorrect tooltip for the Enabled column in Plug-In Manager
 # [#24695] *Incorrect tooltip in News Feed Manager
 # [#24708] *Contact form in frontend does not display the star for required fields

02-Feb-2011 Jean-Marie Simonet
 $ Updated bg-BG.ini

01-Feb-2011 Jean-Marie Simonet
 # [#24701] New preview screenshots required for the admin templates, Thanks Jozcef.
 #$ [#24694] Missing tooltip in Web Links Manager. Thanks Bill.

31-Jan-2011 Mark Dexter
 # [#24642] Incorrect term in a tooltip in the Menu Items screen
 # [#24681] *Issue in back-end login module with Languages not installed in db but present in the admin language folder
 # [#24265] Strict standards: Declaration of WeblinksModelCategory::getItems() should be compatible with that of JModelList::getItems() in
 # [#24298] Screens jumps when using the ACL widget