@@ -30,6 +30,7 @@ $ -> Language fix or change
 04-Feb-2011 Christophe Demko
  # [#24562] com_menu not looking for component xml file (Mark Dexter, Selene Feigl, marius van rijnsoever)
  # [#24693] Articles Category Module Gropu by Author error (Mark Dexter)
+ # [#24731] Details of the components are in different orderings (Jean-Marie Simonet, Jozsef Tamas Herczeg, bill richardson)
 
 04-Feb-2011 Jean-Marie Simonet
  #$ Deleting hard-coded colons
